# paper-eyes

./: .gitignore  LICENSE  README.md  SECURITY.md  THREAT-MODEL.md  pipeline.yaml  pyproject.toml
.github/workflows/: ci.yml
ci/: honesty_denylist.txt  leakage_denylist.txt
demo/: Dockerfile  README.md  chain_driver.py  docker-compose.chain.yml  docker-compose.yml  openai_stub.py  pipeline.yaml  verify_chain.sh  verify_e2e.sh  workflows.yaml
docs/: live-receipts-2026-07-12.md  session-b-receipts.md  uk-ch2-calibration-note.md
examples/paper-clerk/: anchors.yaml  config.yaml  golden.yaml
formpacks/uk-ch2/: formpack.baseline.json  formpack.yaml  schema.json
formpacks/uk-ch2/golden/: persona-01.expected.json  persona-02.expected.json  persona-03.expected.json  persona-04.expected.json  persona-05.expected.json  persona-06.expected.json  seeds.json
src/papereyes/: __init__.py  cli.py  errors.py  gate.py  gates.py  sandbox.py
src/papereyes/config/: __init__.py  loader.py  models.py
src/papereyes/fetch/: __init__.py  forms.py
src/papereyes/formpack/: __init__.py  check.py  scaffold.py
src/papereyes/pipeline/: __init__.py  client.py  extract.py  flatten.py  locate.py  ocr.py  report.py  run.py  splice.py
src/papereyes/synth/: __init__.py  generator.py  personas.py  rasterize.py  render.py
src/papereyes/watch/: __init__.py  daemon.py  emit.py
tests/: pipeline_support.py  support.py  test_check.py  test_cli.py  test_config_is_data.py  test_config_models.py  test_fetch_forms.py  test_gate_units.py  test_honesty_gate.py  test_init_scaffold.py  test_leakage_gate.py  test_no_scans_committed.py  test_pipeline_run_stub.py  test_pipeline_units.py  test_reask.py  test_sandbox.py  test_sm4_name_pattern.py  test_synth_corpus.py  test_synth_personas.py  test_verify_chain_stub.py  test_verify_e2e_stub.py  test_watch_daemon.py  test_watch_emit.py
tests/fixtures/formpack_valid/: formpack.yaml  schema.json
tests/fixtures/malformed/bad_locator_kind/: formpack.yaml
tests/fixtures/malformed/bad_splice/: formpack.yaml
tests/fixtures/malformed/extra_key/: formpack.yaml
tests/fixtures/malformed/floor_out_of_range/: formpack.yaml
tests/fixtures/malformed/missing_extraction/: formpack.yaml
